; ModuleID = '/home/carl/AnghaBench/linux/sound/isa/extr_sc6000.c_sc6000_irq_to_softcfg.c'
source_filename = "/home/carl/AnghaBench/linux/sound/isa/extr_sc6000.c_sc6000_irq_to_softcfg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8 (i32)* @sc6000_irq_to_softcfg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal zeroext i8 @sc6000_irq_to_softcfg(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8, align 1
  store i32 %0, i32* %2, align 4
  store i8 0, i8* %3, align 1
  %4 = load i32, i32* %2, align 4
  switch i32 %4, label %10 [
    i32 5, label %5
    i32 7, label %6
    i32 9, label %7
    i32 10, label %8
    i32 11, label %9
  ]

5:                                                ; preds = %1
  store i8 40, i8* %3, align 1
  br label %11

6:                                                ; preds = %1
  store i8 8, i8* %3, align 1
  br label %11

7:                                                ; preds = %1
  store i8 16, i8* %3, align 1
  br label %11

8:                                                ; preds = %1
  store i8 24, i8* %3, align 1
  br label %11

9:                                                ; preds = %1
  store i8 32, i8* %3, align 1
  br label %11

10:                                               ; preds = %1
  br label %11

11:                                               ; preds = %10, %9, %8, %7, %6, %5
  %12 = load i8, i8* %3, align 1
  ret i8 %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
